tests/paczka1/fuzzy1/88934631.err
Error in line 3: 32N4ziX A753 17,68
Error in line 4: BZzaoS A20 57,6
Error in line 13: BZzaoS A517 82,6
Error in line 12: RyoVSR A517 39,9
Error in line 17: 4SJurP A517 82,9
Error in line 18: RyoVSR A20 71,4
Error in line 22: EUXX4 A20 1,6
